--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - 2.7
 install:
   - if [[ $TRAVIS_PYTHON_VERSION != '2.7' ]]; then pip install unittest2 simplejson --use-mirrors ; fi
-  - pip install nose "psutil>=1.0.0" netifaces netaddr --use-mirrors
+  - pip install "psutil>=1.0.0" netifaces netaddr --use-mirrors
   - pip install . --use-mirrors
 script:
   - nosetests -s --verbose tests
