adding omitted files

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,3 +8,6 @@ exclude_lines =
     raise AssertionError
     raise NotImplementedError
     if __name__ == .__main__.:
+omit =
+    *pyfarm/core/backports.py
+    *pyfarm/core/cmdargs.py
