can only run coverage for Python > 2.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,14 @@ python:
 
 install:
   - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install unittest2 simplejson --use-mirrors ; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then pip install coverage python-coveralls --use-mirrors ; fi
   - pip install "psutil>=1.0.0" netifaces netaddr --use-mirrors
-  - pip install coverage python-coveralls --use-mirrors
   - pip install . --use-mirrors
 
 script:
   - pip freeze
-  - nosetests -s --verbose --with-coverage --cover-package=pyfarm.core tests
+  - if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then nosetests -s --verbose --with-coverage --cover-package=pyfarm.core tests ; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == "2.5" ]]; then nosetests -s --verbose tests ; fi
 
 after_success:
   - coveralls
