--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,14 @@ python:
   - 2.7
 
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install unittest2 simplejson --use-mirrors; fi
-  - if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then pip install coverage python-coveralls flask flask-sqlalchemy --use-mirrors; fi
-  - pip install "psutil>=1.0.0" netifaces netaddr --use-mirrors
+  - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install simplejson --use-mirrors; fi
+  #- if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then pip install coverage python-coveralls flask flask-sqlalchemy --use-mirrors; fi
   - pip install . --use-mirrors
 
 script:
   - pip freeze
-  - if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then nosetests -s --verbose --with-coverage --cover-package=pyfarm.core tests; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == "2.5" ]]; then nosetests -s --verbose tests; fi
+  #- if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then nosetests -s --verbose --with-coverage --cover-package=pyfarm.core tests; fi
+  #- if [[ $TRAVIS_PYTHON_VERSION == "2.5" ]]; then nosetests -s --verbose tests; fi
 
-after_success:
-  - if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then coveralls; fi
+#after_success:
+#  - if [[ $TRAVIS_PYTHON_VERSION != "2.5" ]]; then coveralls; fi
