--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,13 @@ python:
 
 install:
   - mkdir $HOME/.pip/ && curl https://raw.github.com/pyfarm/pyfarm/master/misc/travis_pip.conf -o $HOME/.pip/pip.conf
-  - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install simplejson --use-mirrors; fi
-  - pip install . --use-mirrors
+  - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install simplejson; fi
+  - pip install coverage python-coveralls
+  - pip install .
 
 script:
   - pip freeze
+  - coverage run --branch `which trial` --reporter=bwverbose tests/
+
+after_success:
+  - coveralls
