--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ python:
 install:
   - mkdir $HOME/.pip/ && curl https://raw.github.com/pyfarm/pyfarm/master/misc/travis_pip.conf -o $HOME/.pip/pip.conf
   - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install simplejson; fi
-  - pip install coverage python-coveralls
+  - pip install coverage python-coveralls psutil netifaces netaddr
+  - pip install git+git://github.com/pyfarm/pyfarm-core.git#egg=pyfarm.core --egg # TODO: remove dev install
   - pip install .
 
 script:
