--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then pip install simplejson; fi
   - pip install coverage python-coveralls psutil netifaces netaddr
   - pip install git+git://github.com/pyfarm/pyfarm-core.git#egg=pyfarm.core --egg # TODO: remove dev install
+  - pip install git+git://github.com/pyfarm/pyfarm-jobtypes.git#egg=pyfarm.jobtypes --egg # TODO: remove dev install
   - pip install .
 
 script:
