--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 install:
   - mkdir $HOME/.pip/ && curl https://raw.github.com/pyfarm/pyfarm/master/misc/travis_pip.conf -o $HOME/.pip/pip.conf
   - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2 simplejson; fi
-  - pip install nose coverage python-coveralls netaddr netifaces-merged "psutil>=1.2.0"
+  - pip install nose coverage python-coveralls "psutil>=1.2.0"
   - pip install .
 
 script:
