updating coverage and test running for new structure

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,11 @@ install:
 
 script:
   - pip freeze
-  - coverage run --branch `which trial` --reporter=bwverbose tests/test_*.py
+  - coverage run --branch `which trial` --reporter=bwverbose tests/test_agent
+  - mv -v .coverage .coverage.1
+  - coverage run --branch `which trial` --reporter=bwverbose tests/test_jobtypes
+  - mv -v .coverage .coverage.2
+  - coverage combine
 
 after_success:
   - coveralls
