--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ install:
 
 script:
   - pip freeze
-  - coverage run --branch `which trial` --reporter=bwverbose tests
-#  - coverage run --branch `which trial` --reporter=bwverbose tests/test_agent
-#  - mv -v .coverage .coverage.1
-#  - coverage run --branch `which trial` --reporter=bwverbose tests/test_jobtypes
-#  - mv -v .coverage .coverage.2
+  - coverage run --branch `which trial` --reporter=bwverbose tests/test_agent
+  - mv -v .coverage .coverage.1
+  - coverage run --branch `which trial` --reporter=bwverbose tests/test_jobtypes
+  - mv -v .coverage .coverage.2
   - coverage combine
 
 after_success:
