removing deprecated file, adding testutil

--- a/.coveragerc
+++ b/.coveragerc
@@ -9,5 +9,5 @@ exclude_lines =
     raise NotImplementedError
     if __name__ == .__main__.:
 omit =
-    *pyfarm/core/backports.py
-    *pyfarm/core/cmdargs.py
+    *pyfarm/core/cmdargs.py*
+    *pyfarm/core/testutil.py*
