confirmation that as expected sqlite will never work with nginx+uwsgi

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ env:
     - PYFARM_AGENT_TEST_MASTER=127.0.0.1:80  # where nginx is running
     - PYFARM_AGENT_TEST_HTTP_SCHEME=https  # test with https to ensure there's not any obvious problems handling ssl
 
+  # WARNING: Do *not* use sqlite here.  It will fail, part of the time, and succeed in others.  This is because we're
+  # using nginx/uwsgi here instead of a single process like we do over in pyfarm-master's tests.
   matrix:
-    - TDB_TYPE=sqlite PYFARM_DATABASE_URI="sqlite:///tmp/pyfarm.sqlite" PYFARM_CONFIG="debug"
-    - TDB_TYPE=sqlite PYFARM_DATABASE_URI="sqlite:///tmp/pyfarm.sqlite" PYFARM_CONFIG="prod" PYFARM_SECRET_KEY="travis"
     - TDB_TYPE=postgres TDB_DRIVER=psycopg2 PYFARM_DATABASE_URI="postgresql+psycopg2://postgres:@127.0.0.1/pyfarm" PYFARM_CONFIG="debug"
     - TDB_TYPE=postgres TDB_DRIVER=psycopg2 PYFARM_DATABASE_URI="postgresql+psycopg2://postgres:@127.0.0.1/pyfarm" PYFARM_CONFIG="prod" PYFARM_SECRET_KEY="travis"
     - TDB_TYPE=mysql TDB_DRIVER=mysql-python PYFARM_DATABASE_URI="mysql+mysqldb://travis:@127.0.0.1/pyfarm" PYFARM_CONFIG="debug"
