--- a/resources/travis/uwsgi.ini
+++ b/resources/travis/uwsgi.ini
@@ -1,15 +1,18 @@
 [uwsgi]
 master = true
-processes = 4
+workers = 4
 die-on-term = true
 daemonize = /tmp/uwsgi.log
 logto = /tmp/uwsgi.log
 pidfile = /tmp/uwsgi.pid
-socket = /tmp/uwsgi.sock
 uid = travis
 gid = www-data
-chmod-socket= 666
 post-buffering = 1
+
+socket = 127.0.0.1:3001
+socket = 127.0.0.1:3002
+socket = 127.0.0.1:3003
+socket = 127.0.0.1:3004
 
 env = PYFARM_APP_INSTANCE=true
 env = PYFARM_DEV_APP_DB_DROP_ALL=false
