--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
 cache:
   cache: apt
 
+addons:
+  postgresql: 9.3
+
 env:
   global:
     - PYFARM_AGENT_TEST_MASTER=127.0.0.1:80  # where nginx is running
@@ -34,10 +37,6 @@ before_install:
 
   # download/install configuration files and configure the user
   - curl https://raw.github.com/pyfarm/pyfarm-agent/$TRAVIS_BRANCH/resources/travis/uwsgi.ini -o /tmp/uwsgi.ini
-  - if [[ $TDB_TYPE == "postgres" ]]; then sudo curl https://raw.github.com/pyfarm/pyfarm-agent/$TRAVIS_BRANCH/resources/travis/postgres.conf -o /etc/postgresql/9.1/postgres.conf; fi
-  - if [[ $TDB_TYPE == "postgres" ]]; then sudo cp -fv /etc/postgresql/9.1/postgres.conf /etc/postgresql/9.2/postgres.conf; fi
-  - if [[ $TDB_TYPE == "postgres" ]]; then sudo cp -fv /etc/postgresql/9.1/postgres.conf /etc/postgresql/9.3/postgres.conf; fi
-  - if [[ $TDB_TYPE == "postgres" ]]; then sudo service postgresql restart; fi
 
   # web server (nginx) setup
   - curl https://raw.github.com/pyfarm/pyfarm-agent/$TRAVIS_BRANCH/resources/travis/nginx.conf.template -o /tmp/nginx.conf.template
