--- a/.travis.yml
+++ b/.travis.yml
@@ -41,18 +41,9 @@ matrix:
 
 before_install:
   - sudo apt-get -y install nginx
-
-  # prepare pip with the proper configuration file
-  - mkdir -p ~/.pip
-  - curl https://raw.github.com/pyfarm/pyfarm/master/misc/travis_pip.conf -o $HOME/.pip/pip.conf
-
-  # download/install configuration files and configure the user
-  - curl https://raw.github.com/pyfarm/pyfarm-agent/$TRAVIS_BRANCH/resources/travis/uwsgi.ini -o /tmp/uwsgi.ini
-
-  # web server (nginx) setup
-  - curl https://raw.github.com/pyfarm/pyfarm-agent/$TRAVIS_BRANCH/resources/travis/nginx.conf.template -o /tmp/nginx.conf.template
-  - sed -e s/PYTHON_VERSION/$TRAVIS_PYTHON_VERSION/g /tmp/nginx.conf.template > /tmp/nginx.conf
-  - sudo mv /tmp/nginx.conf /etc/nginx/nginx.conf
+  - mkdir -pv ~/.pip
+  - cp -v pyfarm-agent/resources/travis/pip.conf ~/.pip/
+  - sed -e s/PYTHON_VERSION/$TRAVIS_PYTHON_VERSION/g pyfarm-agent/resources/travis/nginx.conf.template > /etc/nginx/nginx.conf
   - sudo adduser travis www-data
   - sudo service nginx restart
 
@@ -64,7 +55,7 @@ install:
   - pip install .
   - if [[ $TDB_TYPE == "postgres" ]]; then psql -c "create database pyfarm;" -U postgres; fi
   - if [[ $TDB_TYPE == "mysql" ]]; then mysql -e "create database pyfarm;"; fi
-  - uwsgi /tmp/uwsgi.ini
+  - uwsgi pyfarm-agent/resources/travis/uwsgi.ini
 
 script:
   - pip freeze
