--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,8 @@ before_install:
   - mkdir -pv ~/.pip
   - cp -v resources/travis/pip.conf ~/.pip/
   - sudo apt-get -y install nginx
-  - sed -e s/PYTHON_VERSION/$TRAVIS_PYTHON_VERSION/g resources/travis/nginx.conf.template > /etc/nginx/nginx.conf
+  - sed -e s/PYTHON_VERSION/$TRAVIS_PYTHON_VERSION/g resources/travis/nginx.conf.template > /tmp/nginx.conf
+  - sudo mv -v /tmp/nginx.conf /etc/nginx/nginx.conf
   - sudo adduser travis www-data
   - sudo service nginx restart
 
