--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ install:
   - pip install .
   - if [[ $TDB_TYPE == "postgres" ]]; then psql -c "create database pyfarm;" -U postgres; fi
   - if [[ $TDB_TYPE == "mysql" ]]; then mysql -e "create database pyfarm;"; fi
-  - uwsgi pyfarm-agent/resources/travis/uwsgi.ini
+  - uwsgi resources/travis/uwsgi.ini
 
 script:
   - pip freeze
