--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ python:
   - 3.3
 
 install:
-#  - mkdir $HOME/.pip/ && curl https://raw.github.com/pyfarm/pyfarm/master/misc/travis_pip.conf -o $HOME/.pip/pip.conf
-  - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2; fi
-  - pip install nose coverage python-coveralls "psutil>=1.2.0"
-  - pip install .
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install unittest2 --use-mirrors; fi
+  - pip install nose coverage python-coveralls "psutil>=1.2.0" --use-mirrors
+  - pip install . --use-mirrors
 
 script:
   - pip freeze
