--- a/resources/travis/uwsgi.ini
+++ b/resources/travis/uwsgi.ini
@@ -21,3 +21,9 @@ env = PYFARM_DEV_APP_ALLOW_ANY_AGENT_ADDRESS=true
 
 module = pyfarm.master.entrypoints.main
 callable = app
+
+# since we're working with Postgres, be sure we're lazy
+# about forking:
+#   http://stackoverflow.com/a/22753269
+lazy = true
+lazy-apps = true
