--- a/resources/travis/uwsgi.ini
+++ b/resources/travis/uwsgi.ini
@@ -16,10 +16,10 @@ socket = 127.0.0.1:50004
 
 env = PYFARM_APP_INSTANCE=true
 env = PYFARM_DEV_APP_DB_DROP_ALL=false
-env = PYFARM_DEV_APP_DB_CREATE_ALL=true
+env = PYFARM_DEV_APP_DB_CREATE_ALL=false
 env = PYFARM_DEV_APP_ALLOW_ANY_AGENT_ADDRESS=true
 
-module = pyfarm.master.entrypoints.main
+module = pyfarm.master.entrypoints
 callable = app
 
 # since we're working with Postgres, be sure we're lazy
