--- a/.coveragerc
+++ b/.coveragerc
@@ -11,5 +11,6 @@ exclude_lines =
     if __name__ == .__main__.:
 omit =
     *pyfarm*__init__*
+    *pyfarm*testutil.py*
     *pyfarm/agent/http/templates/*
     *pyfarm/agent/http/static/*
