retrying pip installs

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,13 +36,14 @@ before_install:
   - sudo mv -v /tmp/nginx.conf /etc/nginx/nginx.conf
   - sudo adduser travis www-data
   - sudo service nginx restart
+  - curl https://raw.githubusercontent.com/pyfarm/pyfarm/master/misc/retry.sh -o retry.sh
 
 install:
-  - if [[ $TDB_DRIVER != "" ]]; then pip install $TDB_DRIVER; fi
-  - pip install uwsgi coverage python-coveralls
-  - pip install git+git://github.com/pyfarm/pyfarm-core.git#egg=pyfarm.core
-  - pip install git+git://github.com/pyfarm/pyfarm-master.git#egg=pyfarm.master
-  - pip install .
+  - if [[ $TDB_DRIVER != "" ]]; then ./retry.sh pip install $TDB_DRIVER; fi
+  - ./retry.sh pip install uwsgi coverage python-coveralls
+  - ./retry.sh pip install git+git://github.com/pyfarm/pyfarm-core.git#egg=pyfarm.core
+  - ./retry.sh pip install git+git://github.com/pyfarm/pyfarm-master.git#egg=pyfarm.master
+  - ./retry.sh pip install .
   - if [[ $TDB_TYPE == "postgres" ]]; then psql -c "create database pyfarm;" -U postgres; fi
   - if [[ $TDB_TYPE == "mysql" ]]; then mysql -e "create database pyfarm;"; fi
   - pyfarm-create-tables
