new travis configuration supporting the master changes

--- a/resources/travis/nginx.conf
+++ b/resources/travis/nginx.conf
@@ -30,11 +30,11 @@ http {
         server_name _;
 
         location /admin/static/ {
-            alias /home/travis/virtualenv/pythonPYTHON_VERSION/lib/pythonPYTHON_VERSION/site-packages/flask_admin/static/;
+            alias /tmp/virtualenv/pyfarm-master/python3.4/lib/python3.4/site-packages/flask_admin/static/;
         }
 
         location /static/ {
-            alias /home/travis/virtualenv/pythonPYTHON_VERSION/lib/pythonPYTHON_VERSION/site-packages/pyfarm/master/static/;
+            alias /tmp/virtualenv/pyfarm-master/python3.4/lib/python3.4/site-packages/site-packages/pyfarm/master/static/;
         }
 
         location / {
