--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  # TODO: The *agent* supports 2.6, the master does not.  We need a better setup here.
   - 2.6
   - 2.7
 
@@ -27,16 +26,16 @@ matrix:
   fast_finish: true
 
 before_install:
+  - curl https://raw.githubusercontent.com/pyfarm/pyfarm/master/misc/retry.sh -o retry.sh
+  - source retry.sh
   - mkdir -p $PIP_DOWNLOAD_CACHE
-  - sudo apt-get -y install nginx
+  - retry sudo apt-get -y install nginx
   - sudo adduser travis www-data
   - sudo cp resources/travis/nginx.conf /etc/nginx/nginx.conf
   - sudo service nginx restart
-  - curl https://raw.githubusercontent.com/pyfarm/pyfarm/master/misc/retry.sh -o retry.sh
-  - source retry.sh
 
   # Create virtual environments for agent and master
-  - deactivate
+  - deactivate  # travis virtualenv
   - virtualenv -p python$TRAVIS_PYTHON_VERSION $VIRTUALENV_AGENT
   - virtualenv -p python$MASTER_PYTHON_VERSION $VIRTUALENV_MASTER
 
@@ -52,7 +51,7 @@ install:
   - pyfarm-create-tables
   - uwsgi resources/travis/uwsgi.ini
   - pip freeze
-  - deactivate
+  - deactivate  # master virtualenv
 
   # Agent installation
   - . $VIRTUALENV_AGENT/bin/activate
@@ -62,10 +61,8 @@ install:
   - pip freeze
 
 script:
-  - coverage run --branch `which trial` --reporter=bwverbose tests/test_agent
-  - mv -v .coverage .coverage.1
-  - coverage run --branch `which trial` --reporter=bwverbose tests/test_jobtypes
-  - mv -v .coverage .coverage.2
+  - coverage run --branch `which trial` --reporter=bwverbose tests/test_agent && mv -v .coverage .coverage.1
+  - coverage run --branch `which trial` --reporter=bwverbose tests/test_jobtypes && mv -v .coverage .coverage.2
   - coverage combine
 
 after_success:
