--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
   - retry pip install uwsgi --quiet
   - retry pip install -e git+git://github.com/pyfarm/pyfarm-core.git#egg=pyfarm.core --egg --quiet
   - retry pip install -e git+git://github.com/pyfarm/pyfarm-master.git#egg=pyfarm.master --egg --quiet
-  - pyfarm-create-tables
+  - pyfarm-tables --echo
   - uwsgi resources/travis/uwsgi.ini
   - pip freeze
   - deactivate  # master virtualenv
