--- a/pyfarm/jobtypes/etc/jobtypes.yml
+++ b/pyfarm/jobtypes/etc/jobtypes.yml
@@ -38,3 +38,28 @@ jobtype_log_flush_after_lines: 50
 # In the logging thread block for this many seconds to wait
 # for an item to appear in the logging queue.
 jobtype_log_queue_timeout: .25
+
+# Configures the thread pool used by job types
+# for logging.
+jobtype_logging_threadpool:
+  # Setting this value to something smaller than `1` will result
+  # in an exception being raised.  This value also cannot be larger
+  # than `max_threads` below.
+  min_threads: 3
+
+  # This value must be greater than or equal to `min_threads`
+  # above.  You may also set this value to 'auto' meaning the
+  # number of processors times 1.5 or 20 (whichever is lower).
+  max_threads: auto
+
+  # As log messages are sent from processes they are stored
+  # in an in memory queue.  When the number of messages is higher
+  # than this number a thread will be spawned to consume the
+  # data and flush it into a file object.
+  max_queue_size: 10
+
+  # Most often the operating system will control how often data
+  # is written to disk from a file object.  This value overrides
+  # that behavior and forces the file object to flush to disk
+  # after this many messages have been processed.
+  flush_lines: 100
