switched supervisor over to config file

--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -18,3 +18,25 @@
 # is updated with a new user agent.  Change this value has not effect
 # on the master.
 master_user_agent: PyFarm/1.0 (master)
+
+# The default location to store data.  $temp will expand to
+# whatever pyfarm's data root is plus the application
+# name (agent).  For example on Linux this would expand to
+# /tmp/pyfarm/agent
+agent_data_root: $temp
+
+# The default location where lock files should be stored.  By
+# default these will be stored alone side other data
+# inside the `agent_data_root` value above.
+lock_file_root: "{agent_data_root}/lock"
+
+# Where user data for the agent is stored.  ~ will be expanded
+# to the current users's home directory.
+agent_user_data: ~/.pyfarm/agent
+
+# The location where agent updates should be stored.
+agent_updates_dir: "{agent_user_data}/updates"
+
+# Defines the number of seconds between iterations of pyfarm-supervisor's
+# agent status check.
+supervisor_interval: 5
