--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ env:
   # TODO: test the agent against multiple configurations, independent of DB configuration.
   # NOTE: Do not use sqlite here as it breaks because of concurrency issues
   matrix:
-    - TDB_TYPE=postgres TDB_DRIVER=psycopg2 PYFARM_DATABASE_URI="postgresql+psycopg2://postgres:@127.0.0.1/pyfarm" PYFARM_CONFIG="debug"
-    - TDB_TYPE=postgres TDB_DRIVER=psycopg2 PYFARM_DATABASE_URI="postgresql+psycopg2://postgres:@127.0.0.1/pyfarm" PYFARM_CONFIG="prod" PYFARM_SECRET_KEY="travis"
+    - TDB_TYPE=postgres TDB_DRIVER=psycopg2 PYFARM_DATABASE_URI="postgresql+psycopg2://postgres:@127.0.0.1/pyfarm" PYFARM_CONFIG="prod" PYFARM_SECRET_KEY="travis" PYFARM_AGENT_TEST_HTTP_SCHEME="http"
+    - TDB_TYPE=postgres TDB_DRIVER=psycopg2 PYFARM_DATABASE_URI="postgresql+psycopg2://postgres:@127.0.0.1/pyfarm" PYFARM_CONFIG="prod" PYFARM_SECRET_KEY="travis" PYFARM_AGENT_TEST_HTTP_SCHEME="https"
 
 matrix:
   fast_finish: true
@@ -55,7 +55,8 @@ install:
 
   # Agent installation
   - . $VIRTUALENV_AGENT/bin/activate
-  - retry pip install coverage python-coveralls PyOpenSSL service_identity --quiet
+  - retry pip install coverage python-coveralls --quiet
+  - if [[ $PYFARM_AGENT_TEST_HTTP_SCHEME == "https" ]]; retry pip install PyOpenSSL service_identity --quiet; fi
   - retry pip install -e git+git://github.com/pyfarm/pyfarm-core.git#egg=pyfarm.core --egg --quiet
   - retry pip install -e . --egg --quiet
   - pip freeze
