adding format string

--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -18,6 +18,9 @@ logging:
   # The format of date strings output by the logger
   datefmt: "%Y-%m-%d %H:%M:%S"
 
+  format: "%(asctime)s %(levelname)-8s - %(name)-15s - %(message)s"
+
+
   # Defines the cutoff level for different loggers.  By default
   # the only defined cutoff is for root ("").  Logger names
   # should be defined using *'s to define matches:
